# WonderDesk

./: .coverage  .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
.github/workflows/: ci.yaml
blog/: urls.py  views.py
config/: settings.py  urls.py
nginx/: nginx.conf
posts/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  paginations.py  service.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_chapter_alter_post_series_delete_series.py  0002_remove_post_content.py  0003_alter_chapter_options.py  0003_rename_series_post_chapter.py  0004_alter_post_options_remove_post_sequence_order_and_more.py  0005_alter_post_chapter.py  0006_alter_post_chapter.py  0007_remove_post_chapter_alter_post_options_and_more.py  0008_alter_post_media_type.py  0009_alter_post_media_type.py  0010_alter_post_media_type.py  0011_alter_post_media_type.py  0012_alter_post_media_type.py  0013_alter_post_media_type.py  0014_alter_post_media_type.py  0015_remove_post_media_type.py  0016_alter_subscription_options_and_more.py  0017_alter_subscription_options_alter_subscription_active_and_more.py
posts/templatetags/: my_tags.py
static/css/: style.css  styles.css
users/: admin.py  forms.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_payment.py  0004_alter_payment_payment_date.py  0005_remove_payment_paid_chapter.py  0006_alter_payment_method.py  (+3 more)
(+16 files in other folders)
